<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".encodeMessage"
    android:gravity="center"
    tools:ignore="ContentDescription"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/padlock"/>

            <EditText
                android:id="@+id/encryptionKey"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_marginTop="30dp"
                android:hint="@string/secret_key_will_shown_here"
                android:background="@drawable/user_name"
                android:maxLines="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/encryptionBit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/bitLength">
                </Spinner>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/generateKey"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/generate_key"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:background="@drawable/chat_login"
                    android:textColor="#ffffff"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/shareKey"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/share"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>

            <EditText
                android:id="@+id/message"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/some_descriptions"
                android:hint="@string/type_your_message_here"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:scrollbars="vertical" />

            <EditText
                android:id="@+id/encryptedMessage"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/some_descriptions"
                android:hint="@string/encrypted_message"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:scrollbars="vertical" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/encode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cancel_button"
                android:text="@string/encode"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/shareMessage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/share"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        </LinearLayout>

    </ScrollView>



</LinearLayout>